--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -2,28 +2,13 @@
 :navtitle: home
 :page-layout: home-project
 :!numbered:
-
-ifeval::["{project_name}" == "Course Rom"]
-[.lead]
-{project_name} is a GitHub repository template providing a starting point for {feelpp} projects.
-endif::[]
-ifeval::["{project_name}" != "Course Rom"]
-{project_name} is a {feelpp} project. It was created using the repository template https://github.com/feelpp/course-rom[`feelpp/course-rom`].
-endif::[]
-
-NOTE: this documentation serves as a template for your project. You can edit it to fit your needs. You can also remove it if you don't need it.
-
-.Coding with {feelpp} in {cpp} or {python}
-[.examp]
-****
-xref:overview.adoc[{feelpp} {cpp} and {python}] codes are available to help you get started with using and coding with {feelpp}.
-****
-
-.Documenting your work with AsciiDoc and Antora
-[.examp]
-****
-The documentation is written using the https://docs.asciidoctor.org[Asciidoc plain text format] and https://docs.antora.org[Antora] to produce the documentation website. Checkout xref:env/antora.adoc[this page], it is here to help you get started with creating documentation.
-****
+:stem: latexmath
 
 
+Introduction:: xref::attachment$lecture-rbobm-beamer-l1.pdf[Notes > pdf]
+Ingredients:: xref::attachment$lecture-rbobm-beamer-l2.pdf[Notes > pdf] 
+Reduced Basis:: xref::attachment$lecture-rbobm-beamer-approx.pdf[Notes > pdf] 
+
+TP1:: xref::attachment$problem-set-1.pdf[> pdf]
+TP2:: xref::attachment$problem-set-2.pdf[> pdf]
 
