--- a/docs/modules/ROOT/pages/homework/problem-set-3.adoc
+++ b/docs/modules/ROOT/pages/homework/problem-set-3.adoc
@@ -7,8 +7,9 @@ Christophe Prud’homme
 
 We consider again the problem of designing a thermal fin of Problem Set 1 and 2. Given the reduced basis approximation implemented in PS2, we turn to implementing the associated a posteriori error estimation procedures developed in the lecture. The second half of this problem set is devoted to implementing the greedy sampling procedure. We will consider the following two cases:
 
-* Case I (latexmath:[P=1]): We keep the Biot number fixed at latexmath:[Bi = 0.1] and assume that the conductivities of all fins are equivalent, i.e., latexmath:[k = k_1 = k_2 = k_3 = k_4], but are allowed to vary between 0.1 and 10 — we thus have latexmath:[\mu \in D = [0.1, 10].] For this latexmath:[P = 1] case we define the latexmath:[X]-inner product latexmath:[(\cdot, \cdot)_X = a(\cdot, \cdot; \bar{\mu}),] where latexmath:[\bar{\mu} = 1.]
-* Case II (latexmath:[P = 2]): We again assume that the conductivities of all fins are equivalent, i.e., latexmath:[k = k_1 = k_2 = k_3 = k_4] , but are allowed to vary between 0.1 and 10; furthermore, we assume that the Biot number satisfies latexmath:[0.01 \leq Bi \leq 1.] We thus have latexmath:[\mu = (k, Bi) = [0.1, 10\] \times [0.01, 1\].] For this latexmath:[P = 2] case we define the latexmath:[X]-inner product latexmath:[(\cdot, \cdot)_X = a(\cdot, \cdot; \bar{\mu}),] where latexmath:[\bar{\mu} = (1, 0.1)] (the two inner products are in fact the same since latexmath:[Bi = 0.1] here).
+Case I (latexmath:[P=1]):: We keep the Biot number fixed at latexmath:[Bi = 0.1] and assume that the conductivities of all fins are equivalent, i.e., latexmath:[k = k_1 = k_2 = k_3 = k_4], but are allowed to vary between 0.1 and 10 — we thus have latexmath:[\mu \in D = [0.1, 10].] For this latexmath:[P = 1] case we define the latexmath:[X]-inner product latexmath:[(\cdot, \cdot)_X = a(\cdot, \cdot; \bar{\mu}),] where latexmath:[\bar{\mu} = 1.]
+
+Case II (latexmath:[P = 2]):: We again assume that the conductivities of all fins are equivalent, i.e., latexmath:[k = k_1 = k_2 = k_3 = k_4] , but are allowed to vary between 0.1 and 10; furthermore, we assume that the Biot number satisfies latexmath:[0.01 \leq Bi \leq 1.] We thus have latexmath:[\mu = (k, Bi) = [0.1, 10\] \times [0.01, 1\].] For this latexmath:[P = 2] case we define the latexmath:[X]-inner product latexmath:[(\cdot, \cdot)_X = a(\cdot, \cdot; \bar{\mu}),] where latexmath:[\bar{\mu} = (1, 0.1)] (the two inner products are in fact the same since latexmath:[Bi = 0.1] here).
 
 We also define the parameter grids latexmath:[G^{\mathrm{lin}}_{[ \mu_{min} , \mu_{max} ;10\]}] and latexmath:[G^{\mathrm{ln}}_{[ \mu_{min} , \mu_{max} ;10\]}]. The former grid is equi-spaced in latexmath:[\mu], the latter grid is equi-spaced in latexmath:[ln(\mu)] — often advantageous within the reduced basis context. More generally, the "`log`" spacing represents equal relative increments, and thus represents better coverage for parameters that vary over a large range. For the latexmath:[P = 2] case we can then define tensor grids over latexmath:[\mathcal{D}], latexmath:[\Xi^{\mathrm{log}}_M  \subset D  \subset \mathbb{R}^2] , as
 
