--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,10 +1,10 @@
 * xref:index.adoc[Introduction]
 * xref:quickstart.adoc[]
 * xref:overview.adoc[]
-* Homework
-** xref:homework/problem-set-1.adoc[Homework 1]
-** xref:homework/problem-set-2.adoc[Homework 2]
-** xref:homework/problem-set-3.adoc[Homework 3]
+//* Homework
+//** xref:homework/problem-set-1.adoc[Homework 1]
+//** xref:homework/problem-set-2.adoc[Homework 2]
+//** xref:homework/problem-set-3.adoc[Homework 3]
 * Setting up the development Environment
 ** xref:env/cmake.adoc[]
 ** xref:env/antora.adoc[]
