--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -9,9 +9,10 @@ Introduction:: xref::attachment$lecture-rbobm-beamer-l1-2024.pdf[Notes > pdf]
 Ingredients:: xref::attachment$lecture-rbobm-beamer-notations.pdf[Notes > pdf] 
 Reduced Basis:: xref::attachment$lecture-rbobm-beamer-approx.pdf[Notes > pdf] 
 //A priori::  xref::attachment$lecture-rbobm-beamer-apriori.pdf[Notes > pdf] 
-/Error Bounds:: TODO
-Extenstion to Non Compliant problems:: xref::attachment$lecture-rbobm-beamer-l4.pdf[Notes > pdf] 
-Parabolic(time dependent problems):: xref::attachment$lecture-rbobm-beamer-parabolic.pdf[Notes > pdf] 
+//Error Bounds:: TODO
+Extension to Non Compliant problems:: xref::attachment$lecture-rbobm-beamer-l4.pdf[Notes > pdf] 
+Extension to Parabolic problems(time dependent problems):: xref::attachment$lecture-rbobm-beamer-parabolic.pdf[Notes > pdf] 
+Extension to Non-affine  problems:: xref::attachment$lecture-rbobm-beamer-non-affine.pdf[Notes > pdf]
 //
 Homework 1:: xref::attachment$problem-set-1.pdf[> pdf]
 //Homework 2:: xref::attachment$problem-set-2.pdf[> pdf]
